name:                marskow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/secondwtq/marskow#readme
license:             BSD3
license-file:        LICENSE
author:              Second Datke
maintainer:          lovejay-lovemusic@outlook.com
copyright:           2017 Second Datke <lovejay-lovemusic@outlook.com> here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Marskow
                     , Text.Marskow.Types
                     , Text.Marskow.Func
  build-depends:       base >= 4.7 && < 5
                     , text
                     , transformers
                     , mtl
                     , exceptions
                     , containers
                     , hint
                     , cheapskate
                     , hxt
  default-language:    Haskell2010

executable marskow-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  -- other-modules:       ModuleTest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cheapskate
                     , marskow
                     , mtl
                     , containers
                     , text
                     , data-default
                     , blaze-markup
                     , blaze-html
                     , hint
                     , exceptions
                     , hxt
                     , typed-process
  default-language:    Haskell2010

test-suite marskow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , marskow
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/secondwtq/marskow
